Création de la page de démo des composants. Correction sur la méthode Html.clean pour exclure ce qui se trouve dans les balises <pre>. Corrections d'alignement sur le Switch. Correction sur les évènements des boutons radios. Import de la librairie Prisma.js pour afficher du code formaté.

--- a/public/global.css
+++ b/public/global.css
@@ -22,9 +22,9 @@ body {
 	margin: 0; padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
-body *:not(style) {
-	margin: 0; padding: 0;
-	display: flex;
+body *:not(style):not(pre):not(pre *) {
+    margin: 0; padding: 0;
+    display: flex;
 }
 
 /* Size */
